--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@vercel/analytics": "^1.5.0",
+    "@vercel/speed-insights": "^1.2.0",
     "lucide-react": "^0.525.0",
     "motion": "^12.23.9",
     "next": "15.4.4",
